# cpprestapi

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Const.cpp  Const.hpp  Webservice.cpp  Webservice.hpp  main.cpp  webservice.h
src/app/: CMakeLists.txt  main.cpp
src/resource/: AbstractResource.cpp  AbstractResource.h  AbstractResource.hpp  MethodDescription.cpp  MethodDescription.h  MethodDescription.hpp  Resource.cpp  Resource.hpp  ResourceController.cpp  ResourceController.hpp  ResourceFactory.cpp  ResourceFactory.hpp
src/resource/catalog/: Catalog.cpp  Catalog.hpp
src/resource/country/: Country.cpp  Country.hpp
src/resource/customer/: Customer.cpp  Customer.h  Customer.hpp
test/: CMakeLists.txt  main.cpp  t_methoddescrciption.cpp  t_resource.cpp  t_validate.cpp
